--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { 
 
-  "hompage" : "https://MarviinFlores/github.io/swiftlanding",
+  "hompage" : "https://MarviinFlores.github.io/swiftlanding",
   "dependencies": {
     "gh-pages": "^4.0.0"
   }
