--- a/package.json
+++ b/package.json
@@ -1,1 +1,3 @@
-{"hompage":"https://MarviinFlores.github.io/swiftlanding","dependencies":{"gh-pages":"^4.0.0","wow.js":"^1.2.2"}}
+{"hompage":"https://marviinflores.github.io/swiftlanding",
+"dependencies":{"gh-pages":"^4.0.0",
+"wow.js":"^1.2.2"}}
